src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A19.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A19 {
  class A;
  class B;
  interface I;
  enum E;

  association assoc1 A [String] -> B;
  association assoc2 A [I]      -> B;
  association assoc3 A [E]      -> B;
}
