src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A26.cd
/* (c) https://github.com/MontiCore/monticore */

// this is actually correct: assoc1 must not be unique per diagram only per namespace
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A26 {
  class A;
  class B;
  class C;
  class D;

  association assoc1 A -> B [1];
  association assoc1 [1] C <-> D [1];
}
